# YDS2025

./: readme.txt
install/: local_setup.sh  setup.sh
install/rtk_reader/lib/rtk_reader/: read_rtk  rtk_reader
install/rtk_reader/share/rtk_reader/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/rtk_to_local/lib/rtk_to_local/: rtk_reader
install/rtk_to_local/share/rtk_to_local/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/track_error_calc/lib/track_error_calc/: rtk_reader
install/track_error_calc/share/track_error_calc/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/velodyne_distance/lib/velodyne_distance/: distance_node
install/velodyne_distance/share/velodyne_distance/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/velodyne_preprocess/lib/velodyne_preprocess/: rtk_reader
log/: latest_build
src/rtk_reader/: setup.cfg  setup.py
src/rtk_reader/rtk_reader/: rtk_reader.py
src/rtk_to_local/: package.xml  rtk_to_local.py  setup.cfg  setup.py
src/track_error_calc/: package.xml  setup.cfg  setup.py  track_error_calc.py
src/velodyne_distance/: CMakeLists.txt  package.xml
src/velodyne_distance/include/velodyne_distance/: compute_distance.hpp
src/velodyne_distance/launch/: velodyne_launch.py
src/velodyne_distance/src/: compute_distance.cpp  compute_neon.cpp  distance_node.cpp
src/velodyne_preprocess/: setup.cfg  setup.py  velodyne_preprocess.py
(+9 files in other folders)
