<?xml version="1.0"?>
<package format="2">
  <name>velodyne_distance</name>
  <version>0.0.1</version>
  <description>Velodyne point cloud distance processor using NEON/Eigen</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>Eigen3</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
